--- a/Databricks_notebooks/mount_s3_buckets.ipynb
+++ b/Databricks_notebooks/mount_s3_buckets.ipynb
@@ -38,7 +38,7 @@
     "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
     "\n",
     "# mounting geo data\n",
-    "AWS_S3_BUCKET = \"<S3_path_to_geo_bucket>\"\n",
+    "AWS_S3_BUCKET = \"<S3_path_to_geo_bucke>\"\n",
     "# Mount name for the bucket\n",
     "MOUNT_NAME = \"/mnt/<desired_mount_name>\"\n",
     "# Source url\n",
