--- a/Databricks_notebooks/mount_s3_buckets.ipynb
+++ b/Databricks_notebooks/mount_s3_buckets.ipynb
@@ -29,27 +29,27 @@
     "ENCODED_SECRET_KEY = urllib.parse.quote(string=SECRET_KEY, safe=\"\")\n",
     "\n",
     "# mounting pin data\n",
-    "AWS_S3_BUCKET = \"<S3_path_to_pin_bucket>\"\n",
+    "AWS_S3_BUCKET = <S3_path_to_pin_bucket>\n",
     "# Mount name for the bucket\n",
-    "MOUNT_NAME = \"/mnt/<desired_mount_name>\"\n",
+    "MOUNT_NAME = <desired_mount_path>\n",
     "# Source url\n",
     "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
     "# Mount the drive\n",
     "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
     "\n",
     "# mounting geo data\n",
-    "AWS_S3_BUCKET = \"<S3_path_to_geo_bucke>\"\n",
+    "AWS_S3_BUCKET = <S3_path_to_geo_bucke>\n",
     "# Mount name for the bucket\n",
-    "MOUNT_NAME = \"/mnt/<desired_mount_name>\"\n",
+    "MOUNT_NAME = <desired_mount_path>\n",
     "# Source url\n",
     "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
     "# Mount the drive\n",
     "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
     "\n",
     "# mounting user data\n",
-    "AWS_S3_BUCKET = \"<S3_path_to_user_bucket>\"\n",
+    "AWS_S3_BUCKET = <S3_path_to_user_bucket>\n",
     "# Mount name for the bucket\n",
-    "MOUNT_NAME = \"/mnt/<desired_mount_name>\"\n",
+    "MOUNT_NAME = <desired_mount_path>\n",
     "# Source url\n",
     "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
     "# Mount the drive\n",
