--- a/Databricks_notebooks/mount_s3_buckets.ipynb
+++ b/Databricks_notebooks/mount_s3_buckets.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code is used to connect to the desired S3 buckets.\n",
+    "\n",
+    "I have cleaned the file of sensitive information saved to variables, this includes:\n",
+    "\n",
+    "- `AWS_S3_BUCKET`, where we would have `AWS_S3_BUCKET = '<S3_path_to_pin_bucket>'`\n",
+    "\n",
+    "- `MOUNT_NAME`, where we would have `MOUNT_NAME = '<desired_mount_path>'`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -55,6 +68,13 @@
     "# Mount the drive\n",
     "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
