some minor fixes

--- a/Databricks_notebooks/stream_processing.ipynb
+++ b/Databricks_notebooks/stream_processing.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.types import StructField, StringType, StructType, TimestampType, IntegerType\n",
+    "\n",
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reading the Kinesis Streams\n",
+    "\n",
     "First, we are reading the credential file, and extracting the keys we need. \n",
     "\n",
     "> Note that we are also encoding the SECERET_KEY for privacy reasons."
@@ -15,9 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib\n",
-    "\n",
-    "\n",
     "# specifying CSV file format with headers and comma as the delimiter.\n",
     "file_type = \"csv\"\n",
     "first_row_is_header = \"true\"\n",
@@ -87,7 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now create a fucntion which writes the transformed data to appropriate delta tables."
+    "# Writing to Delta Tables\n",
+    "\n",
+    "We will now create a function which writes the transformed data to appropriate delta tables."
    ]
   },
   {
@@ -116,6 +137,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Cleaning\n",
+    "\n",
     "Now we read the pin streaming data, cleaning it then uploading it to the appropriate delta table. I have removed sensitive data too, for example we should have:\n",
     "\n",
     "```\n",
@@ -237,7 +260,7 @@
     "    StructField('country', StringType()),\n",
     "    StructField('latitude', StringType()),\n",
     "    StructField('longitude', StringType()),\n",
-    "    StructField('timestamp', StringType())\n",
+    "    StructField('timestamp', TimestampType())\n",
     "])\n",
     "\n",
     "# setting alias\n",
@@ -261,9 +284,8 @@
     "# dropping the columns 'latitude' and 'longitude'\n",
     "df_geo = df_geo.drop(*['latitude', 'longitude'])\n",
     "\n",
-    "# converting 'timestamp' to a timestamp data type, and formatting it.\n",
+    "# converting 'timestamp' to a timestamp data type.\n",
     "df_geo = df_geo.withColumn('timestamp', to_timestamp(df_geo.timestamp))\n",
-    "df_geo = df_geo.withColumn('timestamp', date_format('timestamp', 'yyyy-MM-dd HH:mm:ss'))\n",
     "\n",
     "# defining the delta table name.\n",
     "table_name = '<desired_delta_table_name>'\n",
@@ -303,7 +325,7 @@
     "    StructField('first_name', StringType()),\n",
     "    StructField('last_name', StringType()),\n",
     "    StructField('age', IntegerType()),\n",
-    "    StructField('date_joined', StringType())\n",
+    "    StructField('date_joined', TimestampType())\n",
     "])\n",
     "\n",
     "# setting alias\n",
@@ -326,9 +348,8 @@
     "# dropping the 'first_name' and 'last_name' columns\n",
     "df_user = df_user.drop(*['first_name', 'last_name'])\n",
     "\n",
-    "# converting 'date_joined' to a timestamp data type, and formatting it.\n",
+    "# converting 'date_joined' to a timestamp data type.\n",
     "df_user = df_user.withColumn('date_joined', to_timestamp(df_user.date_joined))\n",
-    "df_user = df_user.withColumn('date_joined', date_format('date_joined', 'yyyy-MM-dd HH:mm:ss'))\n",
     "\n",
     "# reordering columns\n",
     "df_user = df_user.select('ind', 'user_name', 'age', 'date_joined')\n",
