minor change in layout

--- a/Databricks_notebooks/mount_s3_buckets.ipynb
+++ b/Databricks_notebooks/mount_s3_buckets.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This code is used to connect to the desired S3 buckets.\n",
     "\n",
     "I have cleaned the file of sensitive information saved to variables, this includes:\n",
@@ -19,9 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib\n",
-    "\n",
-    "\n",
     "# Specify file type to be csv\n",
     "file_type = \"csv\"\n",
     "# Indicates file has first row as the header\n",
