--- a/Databricks_notebooks/batch_processing.ipynb
+++ b/Databricks_notebooks/batch_processing.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import *\n",
+    "from pyspark.sql.types import StructField, StringType, StructType, TimestampType, IntegerType"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Cleaning the Data "
    ]
   },
