uploading most recent version

--- a/Databricks_notebooks/stream_processing.ipynb
+++ b/Databricks_notebooks/stream_processing.ipynb
@@ -67,13 +67,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_kinesis_data(stream_name, json_schema, desired_alias):\n",
+    "def read_kinesis_data(stream_name, json_schema):\n",
     "    ''' A function that reads the Kinesis data and outputs a usable dataframe.\n",
     "\n",
     "    Args:\n",
     "        stream_name (`string`): The name of the stream we wish to stream data from.\n",
     "        json_schema (`StructType`): The desired schema of the output dataframe.\n",
-    "        desired_alias (`string`): The desired alias of the dataframe we create.\n",
     "\n",
     "    Returns:\n",
     "        df (`pyspark.sql.DataFrame`): A DataFrame with the specified schema and alias.\n",
@@ -91,13 +90,10 @@
     "        .option('awsSecretKey', SECRET_KEY) \\\n",
     "        .load()\n",
     "\n",
-    "    # extracting the  data from kinesis_stream, it also is decoded in the process\n",
-    "    data = kinesis_stream.selectExpr(\"CAST(data as STRING)\") \n",
-    "\n",
-    "    # applying a schema to the 'data' column in the 'pin_data' dataframe, also applied an alias.\n",
-    "    df = data.select(\n",
-    "        from_json('data', json_schema).alias(desired_alias)\n",
-    "    )\n",
+    "    df = kinesis_stream \\\n",
+    "    .selectExpr(\"CAST(data as STRING)\") \\\n",
+    "    .withColumn(\"data\", from_json(col(\"data\"), json_schema)) \\\n",
+    "    .select(col(\"data.*\"))\n",
     "    return df"
    ]
   },
@@ -128,7 +124,7 @@
     "    df.writeStream \\\n",
     "    .format(\"delta\") \\\n",
     "    .outputMode(\"append\") \\\n",
-    "    .option(\"checkpointLocation\", \"/tmp/kinesis/_checkpoints/\") \\ # adds ability to recover the previous state of a table\n",
+    "    .option(\"checkpointLocation\", f\"/tmp/kinesis/{table_name}_checkpoints/\") \\ # adds ability to recover the previous state of a table\n",
     "    .table(table_name)"
    ]
   },
@@ -174,24 +170,7 @@
     "    StructField('category', StringType())\n",
     "])\n",
     "\n",
-    "desired_alias = 'pin'\n",
-    "\n",
-    "df_pin = read_kinesis_data(stream_name, json_schema, desired_alias)\n",
-    "\n",
-    "# selecting the fields from the 'pin' dataframe, and putting them into the desired order\n",
-    "df_pin = df_pin.selectExpr(\n",
-    "    'pin.index as ind',\n",
-    "    'pin.unique_id as unique_id',\n",
-    "    'pin.title as title',\n",
-    "    'pin.description as description',\n",
-    "    'pin.follower_count as follower_count',\n",
-    "    'pin.poster_name as poster_name',\n",
-    "    'pin.tag_list as tag_list',\n",
-    "    'pin.is_image_or_video as is_image_or_video',\n",
-    "    'pin.image_src as image_src',\n",
-    "    'pin.save_location as save_location',\n",
-    "    'pin.category as category'\n",
-    ")\n",
+    "df_pin = read_kinesis_data(stream_name, json_schema)\n",
     "\n",
     "# replacing invalid entries with `None`, it is best to define a dictionary here as this makes the whole process more scalable. \n",
     "\n",
@@ -262,20 +241,8 @@
     "    StructField('timestamp', TimestampType())\n",
     "])\n",
     "\n",
-    "# setting alias\n",
-    "desired_alias = 'geo'\n",
-    "\n",
     "# using the function defined above.\n",
-    "df_geo = read_kinesis_data(stream_name, json_schema, desired_alias)\n",
-    "\n",
-    "# selecting the fields from the 'geo' dataframe, and putting them into the desired order\n",
-    "df_geo = df_geo.selectExpr(\n",
-    "    'geo.ind as ind',\n",
-    "    'geo.country as country',\n",
-    "    'geo.latitude as latitude',\n",
-    "    'geo.longitude as longitude',\n",
-    "    'geo.timestamp as timestamp'\n",
-    ")\n",
+    "df_geo = read_kinesis_data(stream_name, json_schema)\n",
     "\n",
     "# creating a new column called 'coordinates'\n",
     "df_geo = df_geo.withColumn('coordinates', array(df_geo.latitude, df_geo.longitude))\n",
@@ -327,20 +294,10 @@
     "    StructField('date_joined', TimestampType())\n",
     "])\n",
     "\n",
-    "# setting alias\n",
-    "desired_alias = 'user'\n",
     "\n",
     "# using the function defined above.\n",
-    "df_user = read_kinesis_data(stream_name, json_schema, desired_alias)\n",
+    "df_user = read_kinesis_data(stream_name, json_schema)\n",
     "\n",
-    "# selecting the fields from the 'user' dataframe, and putting them into the desired order\n",
-    "df_user = df_user.selectExpr(\n",
-    "    'user.ind as ind',\n",
-    "    'user.first_name as first_name',\n",
-    "    'user.last_name as last_name',\n",
-    "    'user.age as age',\n",
-    "    'user.date_joined as date_joined'\n",
-    ")\n",
     "# creating a new column called 'user_name'\n",
     "df_user = df_user.withColumn('user_name', concat(df_user.first_name, lit(' '), df_user.last_name))\n",
     "\n",
