--- a/Databricks_notebooks/stream_processing.ipynb
+++ b/Databricks_notebooks/stream_processing.ipynb
@@ -70,6 +70,8 @@
     "def read_kinesis_data(stream_name, json_schema):\n",
     "    ''' A function that reads the Kinesis data and outputs a usable dataframe.\n",
     "\n",
+    "    This function reads the kinesis stream using `spark`. It then deserialises it by: extracting the 'data' field from the Kinesis stream and casts it to a string, parses the 'data' field using the specified json shcema, then selects all columns from the parsed data.\n",
+    "\n",
     "    Args:\n",
     "        stream_name (`string`): The name of the stream we wish to stream data from.\n",
     "        json_schema (`StructType`): The desired schema of the output dataframe.\n",
@@ -90,10 +92,11 @@
     "        .option('awsSecretKey', SECRET_KEY) \\\n",
     "        .load()\n",
     "\n",
+    "    # deserialising the data\n",
     "    df = kinesis_stream \\\n",
-    "    .selectExpr(\"CAST(data as STRING)\") \\\n",
-    "    .withColumn(\"data\", from_json(col(\"data\"), json_schema)) \\\n",
-    "    .select(col(\"data.*\"))\n",
+    "    .selectExpr(\"CAST(data as STRING)\") \\ \n",
+    "    .withColumn(\"data\", from_json(col(\"data\"), json_schema)) \\ \n",
+    "    .select(col(\"data.*\")) \n",
     "    return df"
    ]
   },
@@ -113,7 +116,7 @@
    "outputs": [],
    "source": [
     "def write_kinesis_data(table_name, df):\n",
-    "    ''' A function that writes data to the specified delta table\n",
+    "    ''' A function that writes data to the specified delta table, it also checkpoints the data incase we need to roll it back to an older state.\n",
     "\n",
     "    Args:\n",
     "        table_name (`string`): The desired name for the delta table\n",
@@ -121,11 +124,11 @@
     "    \n",
     "    '''\n",
     "\n",
-    "    df.writeStream \\\n",
+    "    df.writeStream \\ \n",
     "    .format(\"delta\") \\\n",
-    "    .outputMode(\"append\") \\\n",
-    "    .option(\"checkpointLocation\", f\"/tmp/kinesis/{table_name}_checkpoints/\") \\ # adds ability to recover the previous state of a table\n",
-    "    .table(table_name)"
+    "    .outputMode(\"append\") \\ \n",
+    "    .option(\"checkpointLocation\", f\"/tmp/kinesis/{table_name}_checkpoints/\") \\ \n",
+    "    .table(table_name) # the name of the desired delta table where we want to store data"
    ]
   },
   {
