--- a/Databricks_notebooks/stream_processing.ipynb
+++ b/Databricks_notebooks/stream_processing.ipynb
@@ -70,7 +70,10 @@
     "def read_kinesis_data(stream_name, json_schema):\n",
     "    ''' A function that reads the Kinesis data and outputs a usable dataframe.\n",
     "\n",
-    "    This function reads the kinesis stream using `spark`. It then deserialises it by: extracting the 'data' field from the Kinesis stream and casts it to a string, parses the 'data' field using the specified json shcema, then selects all columns from the parsed data.\n",
+    "    This function reads the kinesis stream using `spark`. It then deserialises it by:\n",
+    "    extracting the 'data' field from the Kinesis stream and casts it to a string, parses \n",
+    "    the 'data' field using the specified json shcema, then selects all columns from the \n",
+    "    parsed data.\n",
     "\n",
     "    Args:\n",
     "        stream_name (`string`): The name of the stream we wish to stream data from.\n",
@@ -116,7 +119,8 @@
    "outputs": [],
    "source": [
     "def write_kinesis_data(table_name, df):\n",
-    "    ''' A function that writes data to the specified delta table, it also checkpoints the data incase we need to roll it back to an older state.\n",
+    "    ''' A function that writes data to the specified delta table, it also \n",
+    "    checkpoints the data incase we need to roll it back to an older state.\n",
     "\n",
     "    Args:\n",
     "        table_name (`string`): The desired name for the delta table\n",
@@ -128,7 +132,7 @@
     "    .format(\"delta\") \\\n",
     "    .outputMode(\"append\") \\ \n",
     "    .option(\"checkpointLocation\", f\"/tmp/kinesis/{table_name}_checkpoints/\") \\ \n",
-    "    .table(table_name) # the name of the desired delta table where we want to store data"
+    "    .table(table_name)"
    ]
   },
   {
@@ -175,7 +179,8 @@
     "\n",
     "df_pin = read_kinesis_data(stream_name, json_schema)\n",
     "\n",
-    "# replacing invalid entries with `None`, it is best to define a dictionary here as this makes the whole process more scalable. \n",
+    "# replacing invalid entries with `None`, it is best to define a dictionary \n",
+    "# here as this makes the whole process more scalable. \n",
     "\n",
     "col_and_entries_to_replace = {\n",
     "    'description' : 'No description available Story format',\n",
