--- a/Databricks_notebooks/batch_processing.ipynb
+++ b/Databricks_notebooks/batch_processing.ipynb
@@ -38,13 +38,16 @@
    "outputs": [],
    "source": [
     "def read_s3_mount_data(mount_name):\n",
-    "    ''' A function which reads data from the desired S3 bucket, and returns a usable DataFrame.\n",
+    "    ''' A function which reads data from the desired S3 bucket, and returns a \n",
+    "    usable DataFrame.\n",
     "\n",
     "    Args:\n",
-    "        mount_name ('string'): Corresponds to the name you gave to the mounted S3 bucket.\n",
+    "        mount_name ('string'): Corresponds to the name you gave to the mounted \n",
+    "        S3 bucket.\n",
     "\n",
     "    Returns:\n",
-    "        df (`pyspark.sql.DataFrame`): A DataFrame which is ready to be cleaned and queried.\n",
+    "        df (`pyspark.sql.DataFrame`): A DataFrame which is ready to be cleaned \n",
+    "        and queried.\n",
     "    \n",
     "    '''\n",
     "\n",
@@ -77,7 +80,8 @@
     "# reading the data\n",
     "df_pin = read_s3_mount_data(<mount_name>)\n",
     "\n",
-    "# replacing invalid entries with `None`, it is best to define a dictionary here as this makes the whole process more scalable. \n",
+    "# replacing invalid entries with `None`, it is best to define a dictionary \n",
+    "# here as this makes the whole process more scalable. \n",
     "\n",
     "col_and_entries_to_replace = {\n",
     "    'description' : 'No description available Story format',\n",
