removing redundant imports

--- a/Databricks_notebooks/batch_processing.ipynb
+++ b/Databricks_notebooks/batch_processing.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import *\n",
-    "from pyspark.sql.types import StructField, StringType, StructType, TimestampType, IntegerType"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
