made two functions, one to read the aws creds stored on databricks, and the other mounts the s3 buckets to databricks

--- a/Databricks_notebooks/mount_s3_buckets.ipynb
+++ b/Databricks_notebooks/mount_s3_buckets.ipynb
@@ -30,55 +30,83 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are two functions, one to read the credentials and another to mount the s3 bucket to databricks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify file type to be csv\n",
-    "file_type = \"csv\"\n",
-    "# Indicates file has first row as the header\n",
-    "first_row_is_header = \"true\"\n",
-    "# Indicates file has comma as the delimeter\n",
-    "delimiter = \",\"\n",
-    "# Read the CSV file to spark dataframe\n",
-    "aws_keys_df = spark.read.format(file_type)\\\n",
-    ".option(\"header\", first_row_is_header)\\\n",
-    ".option(\"sep\", delimiter)\\\n",
-    ".load(\"/FileStore/tables/authentication_credentials.csv\")\n",
+    "def read_creds(file_path=\"/FileStore/tables/authentication_credentials.csv\"):\n",
+    "    ''' This function reads the AWS credentials stored on databricks.\n",
     "\n",
-    "# Get the AWS access key and secret key from the spark dataframe\n",
-    "ACCESS_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Access key ID').collect()[0]['Access key ID']\n",
-    "SECRET_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Secret access key').collect()[0]['Secret access key']\n",
-    "# Encode the secret key\n",
-    "ENCODED_SECRET_KEY = urllib.parse.quote(string=SECRET_KEY, safe=\"\")\n",
+    "    Args:\n",
+    "        file_path (`string`): The path to the CSV file containing credentials.\n",
+    "    \n",
+    "    Returns:\n",
+    "        cred_dict (`dictionary`): A dictionary with the credentials needed to connect to the S3 bucket.\n",
+    "    '''\n",
     "\n",
-    "# mounting pin data\n",
-    "AWS_S3_BUCKET = <S3_path_to_pin_bucket>\n",
-    "# Mount name for the bucket\n",
-    "MOUNT_NAME = <desired_mount_path>\n",
-    "# Source url\n",
-    "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
-    "# Mount the drive\n",
-    "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
+    "    # Specify file type to be csv\n",
+    "    file_type = \"csv\"\n",
+    "    # Indicates file has first row as the header\n",
+    "    first_row_is_header = \"true\"\n",
+    "    # Indicates file has comma as the delimeter\n",
+    "    delimiter = \",\"\n",
+    "    # Read the CSV file to spark dataframe\n",
+    "    aws_keys_df = spark.read.format(file_type)\\\n",
+    "    .option(\"header\", first_row_is_header)\\\n",
+    "    .option(\"sep\", delimiter)\\\n",
+    "    .load(file_path)\n",
     "\n",
-    "# mounting geo data\n",
-    "AWS_S3_BUCKET = <S3_path_to_geo_bucke>\n",
-    "# Mount name for the bucket\n",
-    "MOUNT_NAME = <desired_mount_path>\n",
-    "# Source url\n",
-    "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
-    "# Mount the drive\n",
-    "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
+    "    SECRET_KEY = aws_keys_df.where(col('User name')=='databricks-user').select('Secret access key').collect()[0]['Secret access key']\n",
     "\n",
-    "# mounting user data\n",
-    "AWS_S3_BUCKET = <S3_path_to_user_bucket>\n",
-    "# Mount name for the bucket\n",
-    "MOUNT_NAME = <desired_mount_path>\n",
-    "# Source url\n",
-    "SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(ACCESS_KEY, ENCODED_SECRET_KEY, AWS_S3_BUCKET)\n",
-    "# Mount the drive\n",
-    "dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)"
+    "    cred_dict = {\n",
+    "        'ACCESS_KEY' : aws_keys_df.where(col('User name')=='databricks-user').select('Access key ID').collect()[0]['Access key ID'],\n",
+    "        'ENCODED_SECRET_KEY' : urllib.parse.quote(string=SECRET_KEY, safe=\"\")\n",
+    "    }\n",
+    "\n",
+    "    return cred_dict\n",
+    "\n",
+    "def mount_bucket(AWS_S3_BUCKET, MOUNT_NAME):\n",
+    "    ''' Mounts an S3 bucket using the provided AWS credentials and mount name.\n",
+    "\n",
+    "    Args:\n",
+    "        AWS_S3_BUCKET (str): The name of the S3 bucket.\n",
+    "        MOUNT_NAME (str): The name to use for the mount point.\n",
+    "\n",
+    "    Raises:\n",
+    "        MountException: If there is an error during the mounting process.\n",
+    "    '''\n",
+    "\n",
+    "    cred_dict = read_creds()\n",
+    "\n",
+    "    # Source url\n",
+    "    SOURCE_URL = \"s3n://{0}:{1}@{2}\".format(cred_dict['ACCESS_KEY'], cred_dict['ENCODED_SECRET_KEY'], AWS_S3_BUCKET)\n",
+    "\n",
+    "    try:\n",
+    "        # Mount the drive\n",
+    "        dbutils.fs.mount(SOURCE_URL, MOUNT_NAME)\n",
+    "        print(f'S3 bucket {AWS_S3_BUCKET} successfully mounted at {MOUNT_NAME}.')\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f'Error mounting S3 bucket {AWS_S3_BUCKET}. Error given: {e}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For example, to mount the S3 bucket called `'test_bucket'` with mount name `'test_mount'`, one will use:\n",
+    "\n",
+    "```\n",
+    "mount_bucket('test_bucket', 'test_mount')\n",
+    "```"
    ]
   }
  ],
